@@ -1,8 +1,10 @@
 package dev.coms4156.project.backend.controller;
 
+import dev.coms4156.project.backend.dto.RestroomCreateRequest;
+import dev.coms4156.project.backend.dto.RestroomEditProposalRequest;
 import dev.coms4156.project.backend.model.EditProposal;
 import dev.coms4156.project.backend.model.Restroom;
-import dev.coms4156.project.backend.service.MockApiService;
+import dev.coms4156.project.backend.service.db.EditProposalDbService;
 import dev.coms4156.project.backend.service.db.RestroomDbService;
 import dev.coms4156.project.backend.service.db.ReviewDbService;
 import io.swagger.v3.oas.annotations.Operation;
@@ -19,7 +21,6 @@ import java.util.NoSuchElementException;
 import java.util.Set;
 import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.core.env.Environment;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
@@ -40,37 +41,34 @@ import org.springframework.web.bind.annotation.RestController;
 @RequestMapping("/v1/bathrooms")
 public class RestroomController {
 
-  private static final String ROLE_USER_EXPRESSION = "hasRole('USER')";
+  private static final String ROLE_MEMBER_EXPRESSION =
+      "hasAnyRole('USER','THIRD_PARTY_INTEGRATION','ADMIN')";
   private static final String ERROR_KEY = "error";
 
-  private final MockApiService mockService;
-  private final RestroomDbService dbService;
+  private final RestroomDbService restroomDbService;
   private final ReviewDbService reviewDbService;
-  private final boolean useMock;
+  private final EditProposalDbService editProposalDbService;
 
   /**
    * Constructor for DI.
    *
-   * @param mockService mock service implementation (optional)
-   * @param dbService database service implementation
+   * @param restroomDbService database service implementation
    * @param reviewDbService review database service for getting top reviews
-   * @param env Spring environment to check active profile
+   * @param editProposalDbService edit proposal database service
    */
   public RestroomController(
-      @Autowired(required = false) final MockApiService mockService,
-      @Autowired(required = false) final RestroomDbService dbService,
-      @Autowired(required = false) final ReviewDbService reviewDbService,
-      final Environment env) {
-    this.mockService = mockService;
-    this.dbService = dbService;
+      @Autowired final RestroomDbService restroomDbService,
+      @Autowired final ReviewDbService reviewDbService,
+      @Autowired final EditProposalDbService editProposalDbService) {
+    this.restroomDbService = restroomDbService;
     this.reviewDbService = reviewDbService;
-    this.useMock = mockService != null && Arrays.asList(env.getActiveProfiles()).contains("mock");
+    this.editProposalDbService = editProposalDbService;
   }
 
   /**
-   * Submit a new restroom (mock: accepted right away).
+   * Submit a new restroom to the database.
    *
-   * @param restroom minimal restroom payload
+   * @param request minimal restroom payload
    * @return created restroom
    */
   @Operation(
@@ -83,26 +81,32 @@ public class RestroomController {
       @ApiResponse(responseCode = "400", description = "Invalid request payload")
   })
   @PostMapping
-  @PreAuthorize(ROLE_USER_EXPRESSION)
-  public ResponseEntity<Restroom> submit(@RequestBody final Restroom restroom) {
+  @PreAuthorize(ROLE_MEMBER_EXPRESSION)
+  public ResponseEntity<?> submit(@RequestBody final RestroomCreateRequest request) {
+    if (request.getName() == null || request.getName().isBlank()
+        || request.getLatitude() == null || request.getLongitude() == null) {
+      return ResponseEntity.badRequest()
+          .body(Map.of(ERROR_KEY, "name, latitude, and longitude are required"));
+    }
     Restroom toCreate = new Restroom();
-    toCreate.setName(restroom.getName());
-    toCreate.setAddress(restroom.getAddress());
-    toCreate.setLatitude(restroom.getLatitude());
-    toCreate.setLongitude(restroom.getLongitude());
-    toCreate.setHours(restroom.getHours());
-    toCreate.setAmenities(restroom.getAmenities());
-    Restroom saved = useMock ? mockService.submitRestroom(toCreate) : dbService.create(toCreate);
+    toCreate.setName(request.getName());
+    toCreate.setAddress(request.getAddress());
+    toCreate.setLatitude(request.getLatitude());
+    toCreate.setLongitude(request.getLongitude());
+    toCreate.setHours(request.getHours());
+    toCreate.setAmenities(request.getAmenities());
+    Restroom saved = restroomDbService.create(toCreate);
     return ResponseEntity.status(201).body(saved);
   }
 
   /**
-   * Nearby search with optional filters.
+   * Nearby search with optional filters (auth required).
    */
   @Operation(
-      summary = "Find nearby restrooms, no login needed",
+      summary = "Find nearby restrooms, login required",
       description = "Returns restrooms filtered by radius, open status, amenities, and limit.")
   @GetMapping("/nearby")
+  @PreAuthorize(ROLE_MEMBER_EXPRESSION)
   public ResponseEntity<?> nearby(@RequestParam final double lat,
                                   @RequestParam final double lng,
                                   @RequestParam(defaultValue = "1500") final double radius,
@@ -114,24 +118,22 @@ public class RestroomController {
       amSet = Arrays.stream(amenities.split(","))
               .map(String::trim).filter(s -> !s.isEmpty()).collect(Collectors.toSet());
     }
-    if (useMock) {
-      return ResponseEntity.ok(mockService.getNearby(lat, lng, radius, openNow, amSet, limit));
-    } else {
-      return ResponseEntity.ok(dbService.getNearby(lat, lng, radius, openNow, amSet, limit));
-    }
+    return ResponseEntity.ok(
+        restroomDbService.getNearby(lat, lng, radius, openNow, amSet, limit));
   }
 
   /**
-   * Bathroom details with top helpful reviews preview.
+   * Bathroom details with top helpful reviews preview (auth required).
    */
   @Operation(
-      summary = "Get restroom details, no login needed",
+      summary = "Get restroom details, login required",
       description = "Fetches metadata and up to three helpful reviews for the restroom identifier.")
   @GetMapping("/{id}")
+  @PreAuthorize(ROLE_MEMBER_EXPRESSION)
   public ResponseEntity<?> details(@PathVariable final Long id) {
     try {
-      Restroom r = useMock ? mockService.getRestroom(id) : 
-          dbService.getById(id).orElseThrow(() -> new NoSuchElementException("Restroom not found"));
+      Restroom r = restroomDbService.getById(id)
+          .orElseThrow(() -> new NoSuchElementException("Restroom not found"));
       Map<String, Object> dto = new LinkedHashMap<>();
       dto.put("id", r.getId());
       dto.put("name", r.getName());
@@ -142,10 +144,8 @@ public class RestroomController {
       dto.put("amenities", r.getAmenities());
       dto.put("avg_rating", r.getAvgRating());
       dto.put("visitCount", r.getVisitCount());
-      dto.put("topReviews", useMock 
-              ? mockService.getReviews(id, "helpful").stream().limit(3).collect(Collectors.toList())
-              : reviewDbService.getByRestroomId(id, "helpful").stream().limit(3).collect(Collectors
-                .toList()));
+      dto.put("topReviews", reviewDbService.getByRestroomId(id, "helpful")
+          .stream().limit(3).collect(Collectors.toList()));
       return ResponseEntity.ok(dto);
     } catch (NoSuchElementException ex) {
       return ResponseEntity.status(404).body(Map.of(ERROR_KEY, ex.getMessage()));
@@ -159,14 +159,27 @@ public class RestroomController {
       summary = "Propose restroom edits",
       description = "Submit restroom edit suggestions, need a user token.")
   @PatchMapping("/{id}")
-  @PreAuthorize(ROLE_USER_EXPRESSION)
+  @PreAuthorize(ROLE_MEMBER_EXPRESSION)
   public ResponseEntity<?> propose(
       @PathVariable final Long id,
-      @RequestBody final EditProposal p,
+      @RequestBody final RestroomEditProposalRequest request,
       @AuthenticationPrincipal final OAuth2AuthenticatedPrincipal principal) {
     try {
-      p.setProposerUserId(resolveUserIdentifier(principal));
-      EditProposal created = useMock ? mockService.proposeEdit(id, p) : null;
+      restroomDbService.getById(id)
+          .orElseThrow(() -> new NoSuchElementException("Restroom not found"));
+      String subject = resolveUserIdentifier(principal);
+      if (subject == null || subject.isBlank()) {
+        return ResponseEntity.status(401).body(Map.of(ERROR_KEY, "Unable to resolve user subject"));
+      }
+      EditProposal proposal = new EditProposal();
+      proposal.setRestroomId(id);
+      proposal.setProposedName(request.getProposedName());
+      proposal.setProposedAddress(request.getProposedAddress());
+      proposal.setProposedHours(request.getProposedHours());
+      proposal.setProposedAmenities(request.getProposedAmenities());
+      proposal.setProposerUserId(subject);
+      proposal.setStatus("PENDING");
+      EditProposal created = editProposalDbService.create(proposal);
       return ResponseEntity.status(202).body(created);
     } catch (NoSuchElementException ex) {
       return ResponseEntity.status(404).body(Map.of(ERROR_KEY, ex.getMessage()));
@@ -180,22 +193,24 @@ public class RestroomController {
       summary = "Record a restroom visit",
       description = "Increments restroom visit counts, need a user token.")
   @PostMapping("/{id}/visit")
-  @PreAuthorize("hasRole('USER')")
+  @PreAuthorize(ROLE_MEMBER_EXPRESSION)
   public ResponseEntity<?> visit(
       @PathVariable final Long id,
       @AuthenticationPrincipal final OAuth2AuthenticatedPrincipal principal) {
-    resolveUserIdentifier(principal);
+    String subject = resolveUserIdentifier(principal);
+    if (subject == null || subject.isBlank()) {
+      return ResponseEntity.status(401).body(Map.of(ERROR_KEY, "Unable to resolve user subject"));
+    }
     try {
-      if (useMock) {
-        return ResponseEntity.ok(mockService.recordVisit(id));
-      } else {
-        dbService.incrementVisitCount(id);
-        Map<String, Object> response = new HashMap<>();
-        response.put("restroomId", id);
-        response.put("visitCount", dbService.getById(id).map(Restroom::getVisitCount).orElse(0L));
-        response.put("visitedAt", Instant.now().toString());
-        return ResponseEntity.ok(response);
-      }
+      restroomDbService.getById(id)
+          .orElseThrow(() -> new NoSuchElementException("Restroom not found"));
+      restroomDbService.incrementVisitCount(id);
+      Map<String, Object> response = new HashMap<>();
+      response.put("restroomId", id);
+      response.put("visitCount",
+          restroomDbService.getById(id).map(Restroom::getVisitCount).orElse(0L));
+      response.put("visitedAt", Instant.now().toString());
+      return ResponseEntity.ok(response);
     } catch (NoSuchElementException ex) {
       return ResponseEntity.status(404).body(Map.of(ERROR_KEY, ex.getMessage()));
     }
@@ -203,12 +218,15 @@ public class RestroomController {
 
   private String resolveUserIdentifier(final OAuth2AuthenticatedPrincipal principal) {
     if (principal == null) {
-      return "anonymous";
+      return null;
     }
-    String email = principal.getAttribute("email");
-    if (email != null && !email.isBlank()) {
-      return email;
+    String subject = principal.getAttribute("sub");
+    if (subject == null || subject.isBlank()) {
+      subject = principal.getName();
     }
-    return principal.getName();
+    if ((subject == null || subject.isBlank()) && principal.getAttribute("email") != null) {
+      subject = principal.getAttribute("email");
+    }
+    return subject;
   }
 }
