@@ -1,6 +1,7 @@
 package dev.coms4156.project.backend.service.db;
 
 import dev.coms4156.project.backend.model.Restroom;
+import java.sql.Array;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -9,7 +10,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Profile;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.support.GeneratedKeyHolder;
 import org.springframework.jdbc.support.KeyHolder;
@@ -21,7 +21,6 @@ import org.springframework.stereotype.Service;
  * Database service for Restroom entity.
  */
 @Service
-@Profile("!mock")
 public class RestroomDbService {
   private final JdbcTemplate jdbcTemplate;
 
@@ -48,13 +47,13 @@ public class RestroomDbService {
   public List<Restroom> getNearby(double lat, double lng, double radiusMeters, 
                                   Boolean openNow, Set<String> amenitiesFilter, Integer limit) {
     String sql = """
-      SELECT *,
+      SELECT r.*,
           (6371000 * 2 * asin(sqrt(
               sin(radians((latitude - ?) / 2)) * sin(radians((latitude - ?) / 2)) +
               cos(radians(?)) * cos(radians(latitude)) *
               sin(radians((longitude - ?) / 2)) * sin(radians((longitude - ?) / 2))
           ))) as distance
-      FROM restroom
+      FROM restroom r
       WHERE (6371000 * 2 * asin(sqrt(
               sin(radians((latitude - ?) / 2)) * sin(radians((latitude - ?) / 2)) +
               cos(radians(?)) * cos(radians(latitude)) *
@@ -76,10 +75,9 @@ public class RestroomDbService {
    */
   public Restroom create(Restroom restroom) {
     String sql = """
-        INSERT INTO restroom (name, address, latitude, longitude, hours, amenities, 
+        INSERT INTO restroom (name, address, latitude, longitude, hours_json, amenities, 
         avg_rating, visit_count)
         VALUES (?, ?, ?, ?, ?, ?, ?, ?)
-        RETURNING id
         """;
 
     KeyHolder keyHolder = new GeneratedKeyHolder();
@@ -89,15 +87,20 @@ public class RestroomDbService {
       ps.setString(2, restroom.getAddress());
       ps.setDouble(3, restroom.getLatitude());
       ps.setDouble(4, restroom.getLongitude());
-      ps.setString(5, restroom.getHours());
-      ps.setArray(6, connection.createArrayOf("text",
-          restroom.getAmenities().toArray(new String[0])));
+      ps.setString(5, restroom.getHoursJson());
+      List<String> amenities = restroom.getAmenities() == null
+          ? List.of()
+          : restroom.getAmenities();
+      ps.setArray(6, connection.createArrayOf("text", amenities.toArray(new String[0])));
       ps.setDouble(7, restroom.getAvgRating());
       ps.setLong(8, restroom.getVisitCount());
       return ps;
     }, keyHolder);
 
-    restroom.setId(keyHolder.getKey().longValue());
+    Number generatedId = keyHolder.getKey();
+    if (generatedId != null) {
+      restroom.setId(generatedId.longValue());
+    }
     return restroom;
   }
 
@@ -120,16 +123,33 @@ public class RestroomDbService {
   /**
    * Map database row to Restroom object.
    */
-  @SuppressWarnings({"PMD.UnusedFormalParameter"})
   private Restroom mapRestroom(ResultSet rs, int rowNum) throws SQLException {
+    if (rowNum < 0) {
+      throw new SQLException("Row index must not be negative");
+    }
     Restroom restroom = new Restroom();
     restroom.setId(rs.getLong("id"));
     restroom.setName(rs.getString("name"));
     restroom.setAddress(rs.getString("address"));
     restroom.setLatitude(rs.getDouble("latitude"));
     restroom.setLongitude(rs.getDouble("longitude"));
-    restroom.setHours(rs.getString("hours"));
-    restroom.setAmenities(Arrays.asList((String[]) rs.getArray("amenities").getArray()));
+    restroom.setHoursJson(rs.getString("hours_json"));
+    Array amenitiesArray = rs.getArray("amenities");
+    if (amenitiesArray != null) {
+      Object arrayObject = amenitiesArray.getArray();
+      if (arrayObject instanceof String[] strings) {
+        restroom.setAmenities(Arrays.asList(strings));
+      } else if (arrayObject instanceof Object[] objects) {
+        restroom.setAmenities(Arrays.stream(objects)
+            .filter(obj -> obj != null)
+            .map(Object::toString)
+            .toList());
+      } else {
+        restroom.setAmenities(List.of());
+      }
+    } else {
+      restroom.setAmenities(List.of());
+    }
     restroom.setAvgRating(rs.getDouble("avg_rating"));
     restroom.setVisitCount(rs.getLong("visit_count"));
     return restroom;
